--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Login Page</title>
   </head>
   <body>
     <div class="login-wrapper">
       <form action="" class="form">
-        <img src="/images/avatar.png" alt="" srcset="" />
+        <img src="images/avatar.png" alt="" srcset="" />
         <h2>Login</h2>
         <div class="input-group">
           <input type="text" name="loginUser" id="loginUser" required />
